--- a/src/View/ViewDashboard.form
+++ b/src/View/ViewDashboard.form
@@ -51,14 +51,18 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jTabbedPane_DataPengungsian" alignment="1" max="32767" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jTabbedPane_DataPengungsian" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="1" attributes="0">
-              <EmptySpace min="0" pref="24" max="32767" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
               <Component id="jTabbedPane_DataPengungsian" min="-2" pref="470" max="-2" attributes="0"/>
+              <EmptySpace min="0" pref="24" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -81,28 +85,19 @@
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <EmptySpace pref="87" max="32767" attributes="0"/>
+                      <EmptySpace pref="75" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="1" attributes="0">
-                              <Group type="103" groupAlignment="1" attributes="0">
-                                  <Group type="102" alignment="1" attributes="0">
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="lblAlamat" min="-2" max="-2" attributes="0"/>
-                                          <Component id="lblNamaTempat" min="-2" max="-2" attributes="0"/>
-                                          <Component id="lblKapasitas" min="-2" max="-2" attributes="0"/>
-                                      </Group>
-                                      <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="inputNamaTempat" alignment="1" min="-2" pref="171" max="-2" attributes="0"/>
-                                          <Component id="inputAlamat" alignment="1" min="-2" pref="171" max="-2" attributes="0"/>
-                                          <Component id="inputKapasitas" alignment="1" min="-2" pref="171" max="-2" attributes="0"/>
-                                      </Group>
-                                  </Group>
-                                  <Group type="102" alignment="1" attributes="0">
-                                      <Component id="lblIdPengungsian" min="-2" max="-2" attributes="0"/>
-                                      <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
-                                      <Component id="inputIdPengungsian" min="-2" pref="171" max="-2" attributes="0"/>
-                                  </Group>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="lblAlamat" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lblNamaTempat" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lblKapasitas" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="inputNamaTempat" alignment="1" min="-2" pref="171" max="-2" attributes="0"/>
+                                  <Component id="inputAlamat" alignment="1" min="-2" pref="171" max="-2" attributes="0"/>
+                                  <Component id="inputKapasitas" alignment="1" min="-2" pref="171" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
@@ -123,12 +118,7 @@
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="inputIdPengungsian" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="lblIdPengungsian" alignment="3" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="84" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="lblNamaTempat" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="inputNamaTempat" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -146,7 +136,7 @@
                           <Component id="inputKapasitas" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="btnHapusDataPengungsian" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="45" max="32767" attributes="0"/>
+                      <EmptySpace pref="25" max="32767" attributes="0"/>
                       <Component id="jScrollPane1" min="-2" pref="180" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
                   </Group>
@@ -164,7 +154,7 @@
                 <Component class="javax.swing.JTable" name="tableDaftarPengungsian">
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="4" rowCount="5">
+                      <Table columnCount="4" rowCount="0">
                         <Column editable="true" title="Id_Pengungsian" type="java.lang.Integer"/>
                         <Column editable="true" title="Nama Tempat" type="java.lang.String"/>
                         <Column editable="true" title="Alamat" type="java.lang.Integer"/>
@@ -174,22 +164,22 @@
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                       <TableColumnModel selectionModel="0">
                         <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                          <Title value="Id_Pengungsian"/>
+                          <Title/>
                           <Editor/>
                           <Renderer/>
                         </Column>
                         <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                          <Title value="Nama Tempat"/>
+                          <Title/>
                           <Editor/>
                           <Renderer/>
                         </Column>
                         <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                          <Title value="Alamat"/>
+                          <Title/>
                           <Editor/>
                           <Renderer/>
                         </Column>
                         <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                          <Title value="Kapasitas"/>
+                          <Title/>
                           <Editor/>
                           <Renderer/>
                         </Column>
@@ -211,11 +201,6 @@
                 </Component>
               </SubComponents>
             </Container>
-            <Component class="javax.swing.JLabel" name="lblIdPengungsian">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Id_Pengungsian"/>
-              </Properties>
-            </Component>
             <Component class="javax.swing.JLabel" name="lblNamaTempat">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Nama Tempat"/>
@@ -230,11 +215,6 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Kapasitas"/>
               </Properties>
-            </Component>
-            <Component class="javax.swing.JTextField" name="inputIdPengungsian">
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="inputIdPengungsianActionPerformed"/>
-              </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="inputNamaTempat">
               <Events>
@@ -275,7 +255,7 @@
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace pref="34" max="32767" attributes="0"/>
+                      <EmptySpace pref="22" max="32767" attributes="0"/>
                       <Component id="jScrollPane2" min="-2" pref="725" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
                   </Group>
@@ -539,7 +519,7 @@
                       <EmptySpace max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace pref="77" max="32767" attributes="0"/>
+                      <EmptySpace pref="65" max="32767" attributes="0"/>
                       <Component id="jScrollPane3" min="-2" pref="647" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="58" max="-2" attributes="0"/>
                   </Group>
@@ -697,7 +677,7 @@
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace pref="151" max="32767" attributes="0"/>
+                      <EmptySpace pref="139" max="32767" attributes="0"/>
                       <Component id="jScrollPane4" min="-2" pref="496" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="135" max="-2" attributes="0"/>
                   </Group>
