--- a/src/View/ViewDashboard.form
+++ b/src/View/ViewDashboard.form
@@ -265,13 +265,18 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="82" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="lblKeluarga" min="-2" max="-2" attributes="0"/>
-                          <Component id="lblNamaBarang" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="inputNamaBarang" pref="116" max="32767" attributes="0"/>
-                          <Component id="inputKeluarga" max="32767" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="lblKeluarga" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lblNamaBarang" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="inputNamaBarang" pref="116" max="32767" attributes="0"/>
+                                  <Component id="inputKeluarga" max="32767" attributes="0"/>
+                              </Group>
+                          </Group>
+                          <Component id="labelKebutuhanId" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
@@ -325,7 +330,10 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="btnHapusDataKebutuhan" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="checkKebutuhanPokok" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="lblKebutuhanPokok" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                              <Component id="lblKebutuhanPokok" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="labelKebutuhanId" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                       <EmptySpace pref="40" max="32767" attributes="0"/>
                       <Component id="jScrollPane2" min="-2" pref="203" max="-2" attributes="0"/>
@@ -437,15 +445,29 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Tambah"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnTambahDataKebutuhanActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btnUbahDataKebutuhan">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Ubah"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnUbahDataKebutuhanActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btnHapusDataKebutuhan">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Hapus"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnHapusDataKebutuhanActionPerformed"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JLabel" name="labelKebutuhanId">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="id_kebutuhan"/>
               </Properties>
             </Component>
           </SubComponents>
